--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active-link {
+  @apply flex justify-center items-center hover:text-white ml-4 xl:justify-start text-blue-400 mt-7;
+}
+.title-link{
+  @apply hidden xl:block hover:text-white xl:ml-3 
+}
